--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@
 ############# CREDIT to barryclark/jekyll-now FOR TEMPLATE ##########
 
 name: Mariam Joan
-description: Data Specialist/Analyst and Developer, Contractor at Netflix
+description: Data Specialist/Analyst and Developer | Contractor at Netflix
 avatar:
 
 footer-links:
   email: https://mariamjoan.herokuapp.com/#contact
   github: https://github.com/MJOAN
   linkedin: https://linkedin.com/in/mariamjoan
-  twitter: _mjoan
-  stackoverflow:
+  twitter: https://twitter.com/_mjoan
+  # stackoverflow:
 
 google_analytics:
 
