--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ############# CREDIT to barryclark/jekyll-now FOR TEMPLATE ##########
 
 name: Mariam Joan
-description: Data Specialist/Analyst/Developer, Contractor at Netflix
+description: Developer
 # avatar:
 
 footer-links:
